@@ -403,11 +403,13 @@ class AsyncCanvasRedrawer {
 	 * 
 	 */
 	public void asynchronousRedraw() {
-		if (parentCanvas != null) {
+		if ((parentCanvas != null) && (!parentCanvas.isDisposed())) {
 			Display display = parentCanvas.getDisplay();
 			display.asyncExec(new Runnable() {
 				public void run() {
-					parentCanvas.redraw();
+					if ((parentCanvas != null) && (!parentCanvas.isDisposed())) {
+						parentCanvas.redraw();
+					}
 				}
 			});
 		}
@@ -440,11 +442,13 @@ class AsyncCanvasRedrawer {
 	 * 
 	 */
 	public void asynchronousNotifyParentUpdatedInformation() {
-		if(parentCanvas != null) {
+		if((parentCanvas != null) && (!parentCanvas.isDisposed())) {
 			Display display = parentCanvas.getDisplay();
 			display.asyncExec(new Runnable() {
 				public void run() {
-					parentCanvas.notifyParentUpdatedInformation();
+					if((parentCanvas != null) && (!parentCanvas.isDisposed())) {
+						parentCanvas.notifyParentUpdatedInformation();
+					}
 				}
 			});
 		}
