@@ -271,7 +271,7 @@ public class TmfEventsTable extends TmfComponent {
     
     @TmfSignalHandler
     public void experimentUpdated(TmfExperimentUpdatedSignal signal) {
-        if (signal.getExperiment() != fTrace) return;
+        if ((signal.getExperiment() != fTrace) || fTable.isDisposed()) return;
         // Perform the refresh on the UI thread
         fTable.getDisplay().asyncExec(new Runnable() {
             public void run() {
@@ -285,7 +285,7 @@ public class TmfEventsTable extends TmfComponent {
     
     @TmfSignalHandler
     public void traceUpdated(TmfTraceUpdatedSignal signal) {
-        if (signal.getTrace() != fTrace) return;
+        if ((signal.getTrace() != fTrace ) || fTable.isDisposed()) return;
         // Perform the refresh on the UI thread
         fTable.getDisplay().asyncExec(new Runnable() {
             public void run() {
@@ -301,7 +301,7 @@ public class TmfEventsTable extends TmfComponent {
     private boolean fRefreshPending = false;
     @TmfSignalHandler
     public synchronized void rangeSynched(TmfRangeSynchSignal signal) {
-        if (!fRefreshPending) {
+        if (!fRefreshPending && !fTable.isDisposed()) {
             // Perform the refresh on the UI thread
             fRefreshPending = true;
             fTable.getDisplay().asyncExec(new Runnable() {
@@ -317,7 +317,7 @@ public class TmfEventsTable extends TmfComponent {
     
     @TmfSignalHandler
     public void currentTimeUpdated(final TmfTimeSynchSignal signal) {
-        if (signal.getSource() != fTable && fTrace != null) {
+        if (signal.getSource() != fTable && fTrace != null && !fTable.isDisposed()) {
             Job job = new Job("seeking...") {
                 @Override
                 protected IStatus run(IProgressMonitor monitor) {
@@ -325,6 +325,9 @@ public class TmfEventsTable extends TmfComponent {
                     // Perform the updates on the UI thread
                     fTable.getDisplay().asyncExec(new Runnable() {
                         public void run() {
+                        	// Return if table is disposed
+                        	if (fTable.isDisposed()) return;
+                        	
                             fTable.setSelection(index);
                             // The timestamp might not correspond to an actual event
                             // and the selection will point to the next experiment event.
